--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "truffle-contract": "^4.0.31",
     "web3": "^1.8.2"
   },
   "devDependencies": {
