--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "ipfs-http-client": "^60.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "truffle-contract": "^4.0.31",
